--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.lanshifu.demo.anrmonitor">
+    package="com.lanshifu.demo.anrmonitor" >
 
     <application
         android:allowBackup="true"
@@ -8,8 +8,11 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.MyNativeApplication">
-        <activity android:name="com.lanshifu.demo.anrmonitor.MainActivity">
+        android:theme="@style/Theme.MyNativeApplication" >
+
+        <activity android:name="com.hehongdan.anr.Monitor1Activity" />
+        <activity android:name=".MainActivity" />
+        <activity android:name=".MainActivity_" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
