--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,7 +3,7 @@
     package="com.lanshifu.demo.anrmonitor" >
 
     <application
-        android:name="com.hehongdan.anr.plan2.ANRWatchdogTestApplication"
+        android:name="com.hehongdan.anr.plan3.ANRWatchdogTestApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -12,9 +12,9 @@
         android:theme="@style/Theme.MyNativeApplication" >
 
         <activity android:name="com.hehongdan.anr.plan1.Monitor1Activity" />
-        <activity android:name="com.hehongdan.anr.plan2.Monitor2Activity" />
-        <activity android:name=".Monitor3Activity" />
-        <activity android:name="com.lanshifu.demo.MainActivity" >
+        <activity android:name="com.hehongdan.anr.plan3.Monitor3Activity" />
+        <activity android:name="com.hehongdan.anr.plan4.Monitor4Activity" />
+        <activity android:name="com.hehongdan.MainActivity" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
